Closed
Bug 558557
Opened 15 years ago
Closed 15 years ago
Memory leak playing Flash videos
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: streetwolf52, Assigned: bas.schouten)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
825 bytes,
patch
|
jrmuizel
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a5pre) Gecko/20100410 Minefield/3.7a5pre Firefox/3.6
Build Identifier: 20100410035858
Playing a Flash video very quickly starts depleting available physical memory.
Caused by having d2d/dw enabled. OOPP doesn't seemed involved as it can be on or off.
Reproducible: Always
Steps to Reproduce:
1.Enable d2d/dw
2.Play a Flash video
3.
Actual Results:
Available memory starts to run out.
Expected Results:
Very little memory should be used.
Reporter | ||
Updated•15 years ago
|
Reporter | ||
Comment 1•15 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/ba7e4f65c2a8 has no leak. A few d2d patches came right after this build. Might be the cause?
Keywords: regression
Reporter | ||
Updated•15 years ago
|
Priority: -- → P1
Reporter | ||
Comment 3•15 years ago
|
||
10.1 RC (latest one)
http://hg.mozilla.org/mozilla-central/rev/e7a05d0e9fc5 has the leak. The 2d2 patches by BAS were right between the build in Comment 1 and this one.
Comment 4•15 years ago
|
||
Can't reproduce. Do you have a URL where you can reproduce?
Reporter | ||
Comment 5•15 years ago
|
||
I tried flash on msnbc and cnn. Try a long playing video. Also make sure d2d/dw is enabled and is functioning.
Comment 6•15 years ago
|
||
Can you give me a specific url? I have D2D on and it's definitely working.
Comment 7•15 years ago
|
||
OK. Video on front page of CNN leaks about 20mb/sec.
Reporter | ||
Comment 8•15 years ago
|
||
It takes something like 15 seconds before the leak is noticeable on my system. I have 9GB of RAM.
Comment 9•15 years ago
|
||
Bas is guilty until proven innocent :)
Assignee: nobody → bas.schouten
Status: UNCONFIRMED → NEW
Ever confirmed: true
Reporter | ||
Comment 10•15 years ago
|
||
(In reply to comment #9)
> Bas is guilty until proven innocent :)
IDK all fingers point to him :-)
Comment 11•15 years ago
|
||
This had rather dire symptoms for me:
I started watching a video on Hulu and the system began writing to the page file like crazy. The entire system started become unresponsive - I couldn't switch between windows more than a few times per minute. The window playing the video lost its glass effect. Eventually the system switched to a lower resolution and stopped paging. It then popped up a warning that Minefield was using a lot of memory and asked me if it should close it. When I looked with the task manager and process explorer, Minefield's (and all the other processes') memory usage was with normal ranges (everything < 400 MB) but my pagefile had very clearly grown to 11 GB.
The kernel paged and nonpaged pools were also at normal levels.
There must be some memory metric that's not available to us. I have 128MB of VRAM and a DX9 card.
Comment 12•15 years ago
|
||
I can confirm this as well, and I had turned off all addons. By 15 seconds into any Youtube video, RAM usage would start increasing at a really fast rate. However, neither firefox nor plugin-container are showing nearly that drastic an increase in memory usage (in fact, Resource Monitor still says I have low memory usage).
Reporter | ||
Comment 13•15 years ago
|
||
That is also the case with me. If it's a leak then possibly Windows doesn't know it's FF hence we don't see it's memory usage rise as fast as the system in general?
Comment 14•15 years ago
|
||
CNN video shot up to 6gb real quick, I have 8gig on system. However, for me YouTube seems to play ok without any memory spikes. Hulu, did however take off within a few seconds of starting up a video.
AMD Althlon Phenom II Quad 8gig RAM hd3200 on-board video
Today's nightly:
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a5pre) Gecko/20100410 Minefield/3.7a5pre ID:20100410035858
Comment 15•15 years ago
|
||
The memory is being charged to the Modified Page List - likely from shared memory not backed by a file - and subsequently written out to the page file as physical memory is filled. It only seems to happen for me with both D2D and DW enabled.
Assignee | ||
Comment 16•15 years ago
|
||
I suspect I'm guilty, I've not figured out why yet. This probably happens for windowless flash players only (they use ImageSurfaces to draw). Then this probably starts happening once you run out of VRAM and the D3D starts swapping textures out to RAM. This is probably also why we don't see the process consuming that memory. I don't see yet why I'm leaking here, but I'm looking into it.
Assignee | ||
Comment 17•15 years ago
|
||
This needs to be a RefPtr so that the initial reference acquired by the creation functions is actually released!
Attachment #438289 -
Flags: review?(jmuizelaar)
Updated•15 years ago
|
Attachment #438289 -
Flags: review?(jmuizelaar) → review+
Assignee | ||
Comment 18•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 19•15 years ago
|
||
What a guy :-)
You need to log in
before you can comment on or make changes to this bug.
Description
•