Bug 558557: Use a RefPtr here so that sourceBitmap creation references will be released. r=jrmuizel